update dockerfile, minimize JDK to JRE