@@ -1,21 +1,19 @@
 FROM debian:stable-slim
 HEALTHCHECK CMD curl -f http://localhost:8080/ || exit 1
-RUN apt-get update
-RUN apt-get install -y wget curl unzip p7zip
-RUN wget https://raw.githubusercontent.com/sormuras/bach/master/install-jdk.sh
-RUN chmod +x install-jdk.sh;./install-jdk.sh -f 15 --target ./jdk
-RUN wget https://rclone.org/install.sh
-RUN chmod +x install.sh
-RUN ./install.sh
-#USER nobody
-RUN wget https://raw.githubusercontent.com/rarspace01/pirateboat/master/runPirateboat.sh
-RUN chmod +x runPirateboat.sh
+ENV JAVA_HOME="./jdk"
+RUN apt-get update && apt-get install -y curl wget unzip
+RUN curl https://raw.githubusercontent.com/sormuras/bach/master/install-jdk.sh -o install-jdk.sh && chmod +x install-jdk.sh;./install-jdk.sh -f 15 --target ./jdk \
+&& rm -rf jdk.tar.gz && rm -rf ./jdk/lib/src.zip \
+&& ./jdk/bin/jlink --compress=2 --no-header-files --no-man-pages --vm=server --module-path ./jdk/jmods --add-modules ALL-MODULE-PATH --output=./jre \
+&& rm -rf ./jdk/
 ENV PATH="${PATH}:./jdk/bin"
+ENV PATH="${PATH}:./jre/bin"
+RUN curl https://rclone.org/install.sh -o install.sh && chmod +x install.sh && ./install.sh && rm -rf /tmp/*
+#USER nobody
 # copy config for pirateBoat & if used rlcone
 COPY pirateboat.cfg pirateboat.cfg
-#install rclone config
-RUN mkdir -p $HOME/.config/rclone/
 COPY rclone.conf $HOME/.config/rclone/rclone.conf
-#
+RUN mkdir -p $HOME/.config/rclone/
+RUN wget https://github.com/rarspace01/pirateboat/releases/latest/download/pirateboat.jar -O pirateboat.jar && chmod +x pirateboat.jar
 EXPOSE 8080
-CMD ./runPirateboat.sh
+CMD ./jre/bin/java -jar pirateboat.jar
